Fixed input on ios

--- a/assets/sass/pages/_form.scss
+++ b/assets/sass/pages/_form.scss
@@ -52,6 +52,7 @@ label, input, textarea {
 input {
   border: 0;
   border-bottom: 1px solid $white;
+  border-radius: 0;
 
   &:hover {
     outline: none;
